version/0.3/_sources/getting_started/compatibility.rst.txt

.. _ref_ansys_comp:

Ansys version compatibility
===========================

The following table summarizes the compatibility matrix between the PyAnsys Geometry service
and the Ansys product versions.

+---------------------------+------------------------+-------------------------------+-------------------------------+------------------------------+------------------------------+
| PyAnsys Geometry versions | Ansys Product versions | Geometry Service (dockerized) | Geometry Service (standalone) |          Discovery           |          SpaceClaim          |
+===========================+========================+===============================+===============================+==============================+==============================+
|         ``0.2.X``         |          23R2          | :octicon:`check-circle-fill`  | :octicon:`check-circle-fill`  |      :octicon:`x-circle`     | :octicon:`check-circle-fill` |
+---------------------------+------------------------+-------------------------------+-------------------------------+------------------------------+------------------------------+
|         ``0.3.X``         |    23R2 (partially)    | :octicon:`check-circle-fill`  | :octicon:`check-circle-fill`  |      :octicon:`x-circle`     | :octicon:`check-circle-fill` |
+---------------------------+------------------------+-------------------------------+-------------------------------+------------------------------+------------------------------+
|         ``0.4.X``         |      24R1 onward       | :octicon:`check-circle-fill`  | :octicon:`check-circle-fill`  | :octicon:`check-circle-fill` | :octicon:`check-circle-fill` |
+---------------------------+------------------------+-------------------------------+-------------------------------+------------------------------+------------------------------+

.. button-ref:: index
    :ref-type: doc
    :color: primary
    :shadow:
    :expand:

    Go to Getting started
